--- a/block3D.html
+++ b/block3D.html
@@ -50,7 +50,7 @@
 				
 
 		<li><a href="#moreinfo" class="button primary">click here to find out more</a></li><li><a href="#signup" class="button primary">sign up now</a></li>
-							<li><a href="./example.pdf" class="button primary">Dowload free guide to Block3D</a></li>
+							<li><a href="./Blokcked2.pdf" class="button primary">Dowload free guide to Block3D</a></li>
 								</ul>
 							</div>
 							<a href="#one" class="more scrolly">Learn More</a>
